--- a/public/Index.html
+++ b/public/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1 PHP</title>
+    <title>Ejercicio 1 PHP de formulario con conexión a base de datos</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
@@ -21,7 +21,7 @@
     
     <hr>
     <hr>
-    <form>
+    <form action="../modules/include/news_reg.php" method="post">
             <fieldset class="contact">
                 <legend>Contact Information</legend>
                 <div class="contact_input">
@@ -111,21 +111,21 @@
                 <legend>Newsletter</legend>
                 <label>Select the newsletters you would like to recive</label><br>
                 <br>
-                <input id="newshtml" type="checkbox" value="HTML">
+                <input id="newshtml" type="checkbox" value="HTML" name="Newsletter">
                 <label for="newshtml">HTML News</label><br>
                 <br>
-                <input id="newscss" type="checkbox" value="CSS">
+                <input id="newscss" type="checkbox" value="CSS" name="Newsletter">
                 <label for="newscss">CSS News</label><br>
                 <br>
-                <input id="newsjs" type="checkbox" value="JS">
+                <input id="newsjs" type="checkbox" value="JS" name="Newsletter">
                 <label for="newsjs">Javascript News</label><br>
                 <br>
                 <label>Newsletter format</label><br>
                 <br>
-                <input id="fhtml" type="radio" name="format" value="fhtml">
+                <input id="fhtml" type="radio" name="format" value="fhtml" name="Newsletter_format">
                 <label for="fhtml">HTML</label><br>
                 <br>                
-                <input id="fplaintxt" type="radio" name="format" value="fplaintxt">
+                <input id="fplaintxt" type="radio" name="format" value="fplaintxt" name="Newsletter_format">
                 <label for="fplaintxt">Plain text</label><br>
                 <br>
                 <label for="othert">Other topics you'd like to hear about</label><br>
