He realizado cambios generales en el HTML y el PHP de la carpeta include porque había un fallo y me daba un error en la línea 15

--- a/public/Index.html
+++ b/public/Index.html
@@ -122,10 +122,10 @@
                 <br>
                 <label>Newsletter format</label><br>
                 <br>
-                <input id="fhtml" type="radio" name="format" value="fhtml" name="Newsletter_format">
+                <input id="fhtml" type="radio" value="fhtml" name="Newsletter_format">
                 <label for="fhtml">HTML</label><br>
                 <br>                
-                <input id="fplaintxt" type="radio" name="format" value="fplaintxt" name="Newsletter_format">
+                <input id="fplaintxt" type="radio" value="fplaintxt" name="Newsletter_format">
                 <label for="fplaintxt">Plain text</label><br>
                 <br>
                 <label for="othert">Other topics you'd like to hear about</label><br>
