Actualización del código. He cambiado una de las variables y he empezado a verificar que los datos que me llegan tienen el formato que yo pido

--- a/public/Index.html
+++ b/public/Index.html
@@ -111,13 +111,13 @@
                 <legend>Newsletter</legend>
                 <label>Select the newsletters you would like to recive</label><br>
                 <br>
-                <input id="newshtml" type="checkbox" value="HTML" name="Newsletter">
+                <input id="newshtml" type="checkbox" value="HTML" name="Newsletter[]">
                 <label for="newshtml">HTML News</label><br>
                 <br>
-                <input id="newscss" type="checkbox" value="CSS" name="Newsletter">
+                <input id="newscss" type="checkbox" value="CSS" name="Newsletter[]">
                 <label for="newscss">CSS News</label><br>
                 <br>
-                <input id="newsjs" type="checkbox" value="JS" name="Newsletter">
+                <input id="newsjs" type="checkbox" value="JS" name="Newsletter[]">
                 <label for="newsjs">Javascript News</label><br>
                 <br>
                 <label>Newsletter format</label><br>
