He corregido algunos errores dentro del frontEnd con respecto a lo valores dados en los apartados de múltiples selecciones en el formulario. En el backEnd, he corregido un error de código con respteco a newsformat, ya que en la base de datos me debe guardar esos datos en bit(3). Lo que hice fue cambiar sus values en el php y asignarle 0 o 1.

--- a/public/Index.html
+++ b/public/Index.html
@@ -111,7 +111,7 @@
                 <legend>Newsletter</legend>
                 <label>Select the newsletters you would like to recive</label><br>
                 <br>
-                <input id="newshtml" type="checkbox" value="HTML" name="Newsletter[]">
+                <input id="newshtml" type="checkbox" value="HTML" name="Newsletter[]" checked>
                 <label for="newshtml">HTML News</label><br>
                 <br>
                 <input id="newscss" type="checkbox" value="CSS" name="Newsletter[]">
@@ -122,7 +122,7 @@
                 <br>
                 <label>Newsletter format</label><br>
                 <br>
-                <input id="fhtml" type="radio" value="fhtml" name="Newsletter_format">
+                <input id="fhtml" type="radio" value="fhtml" name="Newsletter_format" checked>
                 <label for="fhtml">HTML</label><br>
                 <br>                
                 <input id="fplaintxt" type="radio" value="fplaintxt" name="Newsletter_format">
